--- a/config/config.yml
+++ b/config/config.yml
@@ -1,16 +1,14 @@
 # ----------------------- #
 #      Main Configs       #
 # ----------------------- #
+#http://david.podhola.net
 
-url: http://fsprojects.github.io/FsBlog
-gitlocation: https://github.com/fsprojects/FsBlog.git
-gitbranch: gh-pages
-title: FsBlog - F# static site generation
+url: http://localhost:8080 
+gitlocation: https://github.com/davidpodhola/davidpodhola.github.io.git
+gitbranch: master
+title: David Podhola - F# developer with sales and marketing
 description: >
-    FsBlog aims to be a blog-aware static site generator, mostly built in F#. But don't worry, 
-    you won't even need to know any F# to get up and running. So long as you are comfortable 
-    using a command line or terminal, and have a degree of familiarity with Markdown and Razor 
-    syntax - you're good to go!
+    I love to code and develop application. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.
 
 source: source/
 blog: source/blog/
